Add target="_blank" to external links for improved navigation experience

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     tissue regeneration and therapeutic applications.
                 </p>
                 <figure style="text-align: center;">
-                    <p><a href="https://doi.org/10.1080/17452759.2024.2400330">
+                    <p><a href="https://doi.org/10.1080/17452759.2024.2400330" target="_blank">
                             <img src="../../static/GraphicalAbstract1.png" alt="GraphicalAbstract1" width="600">
                         </a>
                     </p>
@@ -184,8 +184,7 @@
                         testing provides ink properties for numerical simulation of needle extrusion, followed by
                         live/dead cell viability analysis. A machine learning framework integrates cell type, ink
                         viscosity,
-                        and extrusion parameters to predict and optimize cell viability outcomes. Created in <a
-                            href="https://www.biorender.com/" target="_blank">BioRender</a>.
+                        and extrusion parameters to predict and optimize cell viability outcomes.
                     </figcaption>
                 </figure>
 
@@ -201,8 +200,7 @@
                         modeled by support vector regression (SVR) to predict rheological parameters. Regression-based
                         MLP models are employed to predict the Hausdorff distance (HD) and cell viability.
                         The HD metric quantitatively assesses the geometric fidelity between printed and designed
-                        structures, while a regression-based CNN directly predicts HD values from grid images. Created
-                        in <a href="https://www.biorender.com/" target="_blank">BioRender</a>.
+                        structures, while a regression-based CNN directly predicts HD values from grid images.
                     </figcaption>
                 </figure>
 
@@ -215,8 +213,8 @@
                         extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i> <b>19</b>, e2400330
                         (2024).
                         <br>
-                        <a
-                            href="https://doi.org/10.1080/17452759.2024.2400330">https://doi.org/10.1080/17452759.2024.2400330</a>.
+                        <a href="https://doi.org/10.1080/17452759.2024.2400330"
+                            target="_blank">https://doi.org/10.1080/17452759.2024.2400330</a>.
                         <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
                     </li>
                     <li>Mitsuyuki Hidaka, Masaru Kojima, <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai.
@@ -224,7 +222,8 @@
                         switching efficiency in single-nozzle multi-ink bioprinting systems. <i>International Journal of
                             Bioprinting</i> <b>10</b>, 4091 (2024).
                         <br>
-                        <a href="https://doi.org/10.36922/ijb.4091">https://doi.org/10.36922/ijb.4091</a>.
+                        <a href="https://doi.org/10.36922/ijb.4091"
+                            target="_blank">https://doi.org/10.36922/ijb.4091</a>.
                         <i class="fa-solid fa-unlock" style="color: #fba52d;"></i> Open Access.
                     </li>
 
@@ -233,7 +232,8 @@
                         through Horseradish Peroxidase-Catalyzed Cross-Linking. <i>ACS Applied Bio Materials</i>
                         <b>7</b>, 3506-3514 (2024).
                         <br>
-                        <a href="https://doi.org/10.1021/acsabm.4c00418">https://doi.org/10.1021/acsabm.4c00418</a>.
+                        <a href="https://doi.org/10.1021/acsabm.4c00418"
+                            target="_blank">https://doi.org/10.1021/acsabm.4c00418</a>.
                     </li>
                 </ol>
 
@@ -244,18 +244,19 @@
                         Presentation Title: <u>AI-Driven 3D Bioprinting System for Optimizing Printing
                             Performance</u><br>
                         <b>Colin Zhang</b>, Kelum Elvitigala, and Shinji Sakai <a
-                            href="https://www4.scej.org/meeting/90a/prog/en_progsearch.html?Ae=Zhang%20Colin"><i
-                                class="fas fa-external-link-alt"></i></a>
+                            href="https://www4.scej.org/meeting/90a/prog/en_progsearch.html?Ae=Zhang%20Colin"
+                            target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </li>
                     <li>
                         The 55th Autumn Meeting of The Society of Chemical Engineers, Japan, Hokkaido University,
                         September 10-13, 2024<br>
                         Presentation Title: <u>Predictive modeling of cell viability in extrusion-based 3D bioprinting
-                            using machine learning</u> <b>[<a href="https://www.scej.org/news/detail/23235/">Featured
+                            using machine learning</u> <b>[<a href="https://www.scej.org/news/detail/23235/"
+                                target="_blank">Featured
                                 Presentation (22 out of 1130)</a>]</b><br>
                         <b>Colin Zhang</b>, Yasunori Okano, and Shinji Sakai <a
-                            href="https://www4.scej.org/meeting/55f/prog/en_progsearch.html?Ae=Zhang%20Colin"><i
-                                class="fas fa-external-link-alt"></i></a>
+                            href="https://www4.scej.org/meeting/55f/prog/en_progsearch.html?Ae=Zhang%20Colin"
+                            target="_blank"><i class="fas fa-external-link-alt"></i></a>
 
                     <li>
                         The 53rd Autumn Meeting of The Society of Chemical Engineers, Japan, Shinshu University,
@@ -264,25 +265,29 @@
                             and Cell Viability in Nozzle Printheads for 3D Extrusion Bioprinting</u><br>
                         <b>Colin Zhang</b>, Mitsuyuki Hidaka, Masaru Kojima, Shinji
                         Sakai, and Yasunori Okano <a
-                            href="https://www4.scej.org/meeting/53f/prog/en_progsearch.html?Ae=Zhang%20Colin"><i
-                                class="fas fa-external-link-alt"></i></a>
+                            href="https://www4.scej.org/meeting/53f/prog/en_progsearch.html?Ae=Zhang%20Colin"
+                            target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </li>
                 </ol>
 
 
                 <h2>Course Certificates</h2>
                 <ul>
-                    <li><a href="https://credentials.edx.org/credentials/de023108bbbb4963a80cb58da484beb3">Computer
+                    <li><a href="https://credentials.edx.org/credentials/de023108bbbb4963a80cb58da484beb3"
+                            target="_blank">Computer
                             Science for Artificial Intelligence <i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://courses.edx.org/certificates/c71f1d7e284248b4a319b8a0022d2cea">CS50AI:
+                    <li><a href="https://courses.edx.org/certificates/c71f1d7e284248b4a319b8a0022d2cea"
+                            target="_blank">CS50AI:
                             Introduction to Artificial Intelligence with Python <i
                                 class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac">CS50x:
+                    <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac"
+                            target="_blank">CS50x:
                             Introduction to Computer Science <i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a
-                            href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
+                    <li><a href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course"
+                            target="_blank">Mathematics
                             for Machine Learning: Linear Algebra <i class="fas fa-external-link-alt"></i></a></li>
-                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/">The Git &
+                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/"
+                            target="_blank">The Git &
                             Github Bootcamp <i class="fas fa-external-link-alt"></i></a></li>
                 </ul>
 
