Add icon hover effects for social media and built with icons

--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
     <script src="js/calendar.js"></script>
     <script src="js/back-to-top-toggle.js"></script>
     <script src="js/copy-code.js"></script>
+    <script src="js/icon-hover.js"></script>
 
 </body>
 
