--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
 
             <main class="col-lg">
 
-                <h2>Hello, World!</h2>
+                <h2>
+                    <code id="python-code" class="command" style="color: #333333; font-size: 1.0em;
+                    ">Hello, World!</code>
+                </h2>
 
                 <p>I'm Colin Zhang, currently a Ph.D. student at The University of Osaka, focusing on computational
                     fluid
