Update personal introduction and research focus in Japanese homepage

--- a/index.html
+++ b/index.html
@@ -145,26 +145,31 @@
                     ">Hello, World!</code>
                 </h2>
 
-                <p>I'm Colin Zhang, currently a Ph.D. student at The University of Osaka, focusing on computational
-                    fluid
-                    dynamics, machine learning applications, and 3D bioprinting.
-                    My passion with science and engineering started early, but it was during my mechanical
-                    engineering studies at UC Santa Barbara that I discovered my passion for computational
-                    problem-solving. This intersection of science and computation sparked my interest in programming,
-                    opening up a world of new problem-solving techniques and introducing me to the power of
-                    computational thinking.</p>
+                <p>I'm Colin Zhang, currently a Ph.D. student at The University of Osaka, specializing in additive
+                    manufacturing and machine learning research. I graduated with a B.S. in Mechanical
+                    Engineering from UC Santa Barbara in 2020 and continued my studies at The University of
+                    Osaka, where I completed my M.E. in Chemical Engineering in 2023.</p>
 
-                <p>As I developed skills in Python, C, JavaScript, HTML/CSS, and machine learning, I began to see how
-                    programming could transform traditional engineering fields. I'm particularly excited about the
-                    potential of combining machine learning with biotechnology. As a MEXT scholar in Japan, I've had the
-                    chance to dive deeper into these areas while also supporting undergraduates at Osaka University's
-                    Main Library.</p>
+                <p>Throughout my academic journey, I developed expertise in Python and machine learning.
+                    My current
+                    research leverages machine learning to optimize 3D bioprinting processes. This work involves
+                    predicting
+                    cell viability
+                    during extrusion-based bioprinting through numerical simulations, support vector regression (SVR),
+                    and multilayer perceptron (MLP) models. Another focus area includes developing a novel printing
+                    performance
+                    framework that combines Hausdorff distance (HD) with convolutional neural networks (CNNs) to assess
+                    geometric
+                    fidelity. Additionally, utilizing conditional variational autoencoders (CVAEs) to
+                    generate printing outcome predictions based on bioink
+                    rheological properties and printing parameters.</p>
 
-                <p>Outside of my academic pursuits, I have a diverse range of interests. I love the challenge of
-                    mountain climbing and the perspective-broadening experiences of travel. I'm a firm believer in
-                    lifelong learning, often immersing myself in online courses to expand my knowledge. To unwind, I
-                    lose myself in a good book, finding it both relaxing and enlightening. These experiences continue to
-                    shape me not just as a student and researcher, but as a person.</p>
+                <p>When I'm not in the lab, you'll often find me planning my next mountain climbing adventure or
+                    exploring new
+                    places around the world. I'm constantly curious about learning new things, whether through online
+                    courses
+                    that catch my interest or getting lost in a good book on a quiet evening. These pursuits keep me
+                    balanced and bring fresh perspectives to both my research and everyday life.</p>
 
                 <h2>Research Interests <a href="https://en.wikipedia.org/wiki/3D_bioprinting"><i
                             class="fa-brands fa-wikipedia-w"></i></a></h2>
