Update Japanese homepage to include generative AI models in research description for clarity

--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
                     performance
                     framework that combines Hausdorff distance (HD) with convolutional neural networks (CNNs) to assess
                     geometric
-                    fidelity. Additionally, utilizing conditional variational autoencoders (CVAEs) to
-                    generate printing outcome predictions based on bioink
+                    fidelity. Additionally, utilizing generative AI models such as conditional variational autoencoders
+                    (CVAEs) to
+                    generate printing outcome predictions based on ink
                     rheological properties and printing parameters.</p>
 
                 <p>When I'm not in the lab, you'll often find me planning my next mountain climbing adventure or
