Update research interests link to open in a new tab on Japanese homepage

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     that catch my interest or getting lost in a good book on a quiet evening. These pursuits keep me
                     balanced and bring fresh perspectives to both my research and everyday life.</p>
 
-                <h2>Research Interests <a href="https://en.wikipedia.org/wiki/3D_bioprinting"><i
+                <h2>Research Interests <a href="https://en.wikipedia.org/wiki/3D_bioprinting" target="_blank"><i
                             class="fa-brands fa-wikipedia-w"></i></a></h2>
                 <p>3D bioprinting is advancing rapidly in the field of tissue engineering, enabling the
                     creation of complex, biologically engineered structures with high precision. Key challenges in the
