Update personal introduction on Japanese homepage to enhance clarity and detail in research description

--- a/index.html
+++ b/index.html
@@ -145,31 +145,26 @@
                     ">Hello, World!</code>
                 </h2>
 
-                <p>I'm Colin Zhang, currently a Ph.D. student at The University of Osaka, specializing in additive
-                    manufacturing and machine learning research. I graduated with a B.S. in Mechanical
-                    Engineering from UC Santa Barbara in 2020 and continued my studies at The University of
-                    Osaka, where I completed my M.E. in Chemical Engineering in 2023.</p>
+                <p>I'm Colin Zhang, currently a Ph.D. student at The University of Osaka. My research topics involve
+                    additive manufacturing, numerical simulation, and machine learning. I graduated from UC Santa
+                    Barbara with a B.S. in Mechanical
+                    Engineering in 2020. I continued my studies at The University of
+                    Osaka and completed my M.E. in Chemical Engineering in 2023.</p>
 
-                <p>Throughout my academic journey, I developed expertise in Python and machine learning.
-                    My current
+                <p>Throughout my academic journey, I developed expertise in Python and machine learning. My current
                     research leverages machine learning to optimize 3D bioprinting processes. This work involves
-                    predicting
-                    cell viability
-                    during extrusion-based bioprinting through numerical simulations, support vector regression (SVR),
-                    and multilayer perceptron (MLP) models. Another focus area includes developing a novel printing
-                    performance
-                    framework that combines Hausdorff distance (HD) with convolutional neural networks (CNNs) to assess
-                    geometric
-                    fidelity. Additionally, utilizing generative AI models such as conditional variational autoencoders
-                    (CVAEs) to
-                    generate printing outcome predictions based on ink
-                    rheological properties and printing parameters.</p>
+                    predicting cell viability affected by the extrusion process in 3D bioprinting through numerical
+                    simulations, support vector regression (SVR), and multilayer perceptron (MLP) models. Another focus
+                    area is to develop a novel printing performance evaluation framework that combines the Hausdorff
+                    distance (HD) with convolutional neural networks (CNNs) to assess geometric fidelity automatically.
+                    Additionally, generative AI models such as conditional variational autoencoders (CVAEs) were
+                    explored to generate printing outcome predictions based on ink rheological properties and printing
+                    parameters.</p>
 
                 <p>When I'm not in the lab, you'll often find me planning my next mountain climbing adventure or
                     exploring new
-                    places around the world. I'm constantly curious about learning new things, whether through online
-                    courses
-                    that catch my interest or getting lost in a good book on a quiet evening. These pursuits keep me
+                    places in Japan. I'm constantly curious about learning new things, whether through watching online
+                    courses or getting lost in a good book on a quiet evening. These pursuits keep me
                     balanced and bring fresh perspectives to both my research and everyday life.</p>
 
                 <h2>Research Interests <a href="https://en.wikipedia.org/wiki/3D_bioprinting" target="_blank"><i
