Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <a href="templates/ja/index.html" class="language-link"
                                 style="display: inline-flex; align-items: center;">
                                 <strong>日本語&nbsp;</strong>
-                                <img src="/static/Flag_of_Japan.png" alt="Japanese Flag" class="flag-icon">
+                                <img src="/static/flag/Flag_of_Japan.png" alt="Japanese Flag" class="flag-icon">
                             </a>
                         </span>
 
