Update greeting format in English and Japanese homepages for consistency

--- a/index.html
+++ b/index.html
@@ -142,10 +142,7 @@
 
             <main class="col-lg">
 
-                <h2>
-                    <code id="python-code" class="command" style="color: #333333; font-size: 1.0em;
-                    ">Hello, World!</code>
-                </h2>
+                <h2>>>> Hello, World!</h2>
 
                 <p>I'm Colin Zhang, currently a Ph.D. student at The University of Osaka. My research topics involve
                     additive manufacturing, numerical simulation, and machine learning. I graduated from UC Santa
