Add new publication entry to English and Japanese homepages

--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
 
                 <h2>Publications</h2>
                 <ol>
+                    <li><b>Colin Zhang</b>, Kelum Elvitigala, and Shinji Sakai.
+                        AI-powered printability evaluation
+                        framework for 3D bioprinting using Hausdorff distance metrics. <i>Biofabrication</i>, In Press
+                        (2026).
+                    </li>
                     <li><b>Colin Zhang</b>, Kelum Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         Machine learning-based prediction and optimisation framework for as-extruded cell viability in
                         extrusion-based 3D bioprinting. <i>Virtual and Physical Prototyping</i> <b>19</b>, e2400330
