Update publication details in English and Japanese homepages

--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
                 <ol>
                     <li><b>Colin Zhang</b>, Kelum Elvitigala, and Shinji Sakai.
                         AI-powered printability evaluation
-                        framework for 3D bioprinting using Hausdorff distance metrics. <i>Biofabrication</i>, In Press
+                        framework for 3D bioprinting using Hausdorff distance metrics. <i>Biofabrication</i> <b>18</b>,
+                        015015
                         (2026).
                         <br>
                         <a href="https://doi.org/10.1088/1758-5090/ae288c"
