Add publisher preview links for publications in English and Japanese homepages

--- a/index.html
+++ b/index.html
@@ -218,7 +218,10 @@
                         (2026).
                         <br>
                         <a href="https://doi.org/10.1088/1758-5090/ae288c"
-                            target="_blank">https://doi.org/10.1088/1758-5090/ae288c</a>.
+                            target="_blank">https://doi.org/10.1088/1758-5090/ae288c</a>. <i class="fa-solid fa-lock"
+                            style="color: #e8443d;"></i> <a
+                            href="https://www.researchgate.net/publication/398396117_AI-powered_printability_evaluation_framework_for_3D_bioprinting_using_Hausdorff_distance_metrics">[Publisher
+                            Preview]</a>
                     </li>
                     <li><b>Colin Zhang</b>, Kelum Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
                         Machine learning-based prediction and optimisation framework for as-extruded cell viability in
@@ -245,7 +248,8 @@
                         <b>7</b>, 3506-3514 (2024).
                         <br>
                         <a href="https://doi.org/10.1021/acsabm.4c00418"
-                            target="_blank">https://doi.org/10.1021/acsabm.4c00418</a>.
+                            target="_blank">https://doi.org/10.1021/acsabm.4c00418</a>. <i class="fa-solid fa-lock"
+                            style="color: #e8443d;"></i>
                     </li>
                 </ol>
 
