--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
                         <a href="https://doi.org/10.1088/1758-5090/ae288c"
                             target="_blank">https://doi.org/10.1088/1758-5090/ae288c</a>. <i class="fa-solid fa-lock"
                             style="color: #e8443d;"></i> <a
-                            href="https://www.researchgate.net/publication/398396117_AI-powered_printability_evaluation_framework_for_3D_bioprinting_using_Hausdorff_distance_metrics">[Publisher
+                            href="https://www.researchgate.net/publication/398396117_AI-powered_printability_evaluation_framework_for_3D_bioprinting_using_Hausdorff_distance_metrics"
+                            target="_blank">[Publisher
                             Preview]</a>
                     </li>
                     <li><b>Colin Zhang</b>, Kelum Elvitigala, Wildan Mubarok, Yasunori Okano, and Shinji Sakai.
